--- a/src/components/About.css
+++ b/src/components/About.css
@@ -7,8 +7,18 @@
   margin-bottom: 40px
 }
 
+.header-image2 {
+
+  display: block;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 40px
+}
+
 .about-profile-pic {
   width: 25%;
   float: left;
+
   margin: 0 1em 1em 0;
 }
