--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-  color: grey;
-  font-weight: 300;
+  color: black;
+  font-weight: 400;
+  font-size: 12pt;
+}
+a {
+  color: blue;
+  font-weight: 400;
+  font-size: 12pt;
 }
